inicializando o objeto db

--- a/realtime_database.ipynb
+++ b/realtime_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,15 +10,43 @@
     "import pyrebase\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
-    "from getpass import getpass"
+    "from getpass import getpass\n",
+    "\n",
+    "firebaseConfig = {\n",
+    "    \"apiKey\": os.getenv(\"apiKey\"),\n",
+    "    \"authDomain\": os.getenv(\"authDomain\"),\n",
+    "    \"databaseURL\": os.getenv(\"databaseURL\"),\n",
+    "    \"projectId\": os.getenv(\"projectId\"),\n",
+    "    \"storageBucket\": os.getenv(\"storageBucket\"),\n",
+    "    \"messagingSenderId\": os.getenv(\"messagingSenderId\"),\n",
+    "    \"appId\": os.getenv(\"appId\"),\n",
+    "    \"measurementId\": os.getenv(\"measurementId\") \n",
+    "}\n",
+    "\n",
+    "firebase = pyrebase.initialize_app(firebaseConfig)\n",
+    "\n",
+    "db = firebase.database()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyrebase.pyrebase.Database at 0x7f71b26f9a30>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db"
+   ]
   }
  ],
  "metadata": {
