--- a/realtime_database.ipynb
+++ b/realtime_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,22 +30,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#definindo o registro\n",
+    "registro = {\n",
+    "    \"nome\": \"Victor Santos Silva\",\n",
+    "    \"cpf\": \"123.456.789-10\",\n",
+    "    \"cep\": \"11250000\",\n",
+    "    \"rua\": \"Miguel Seiad Bichir\",\n",
+    "    \"numero\": 1270,\n",
+    "    \"bairro\": \"Vila Agaó\",\n",
+    "    \"cidade\": \"Bertioga\",\n",
+    "    \"estado\": \"São Paulo\",\n",
+    "    \"telefone\": \"1333163316\",\n",
+    "    \"email\": \"victor.santos.cd@gmail.com\",\n",
+    "    \"senha\": \"minhasenhasupersecreta\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#definindo o registro2\n",
+    "registro2 = {\n",
+    "    \"nome\": \"Suelen Simões Costa\",\n",
+    "    \"cpf\": \"123.456.789-10\",\n",
+    "    \"cep\": \"11250000\",\n",
+    "    \"rua\": \"Miguel Seiad Bichir\",\n",
+    "    \"numero\": 1270,\n",
+    "    \"bairro\": \"Vila Agaó\",\n",
+    "    \"cidade\": \"Bertioga\",\n",
+    "    \"estado\": \"São Paulo\",\n",
+    "    \"telefone\": \"1333163316\",\n",
+    "    \"email\": \"victor.santos.cd@gmail.com\",\n",
+    "    \"senha\": \"minhasenhasupersecreta\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<pyrebase.pyrebase.Database at 0x7f71b26f9a30>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O registro foi inserido no banco de dados!\n"
+     ]
     }
    ],
    "source": [
-    "db"
+    "#Inserindo o registro\n",
+    "db.child(\"usuarios\").push(registro)\n",
+    "print(\"O registro foi inserido no banco de dados!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O registro foi inserido no banco de dados!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Inserindo o registro2\n",
+    "db.child(\"usuarios\").child(\"usuario\").set(registro2)\n",
+    "print(\"O registro foi inserido no banco de dados!\")\n",
+    "#desta forma, o usuário é inserido na chave usuário, ao invés de criada uma string aleatória para isto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Neste ponto, temos dois registros no banco de dados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registro atualizado com sucesso!\n"
+     ]
+    }
+   ],
+   "source": [
+    "db.child(\"usuarios\").child(\"usuario\").update({\"cidade\": \"Botucatu\"})\n",
+    "print(\"Registro atualizado com sucesso!\")"
    ]
   }
  ],
