iterando com loop

--- a/realtime_database.ipynb
+++ b/realtime_database.ipynb
@@ -135,6 +135,44 @@
     "db.child(\"usuarios\").child(\"usuario\").update({\"cidade\": \"Botucatu\"})\n",
     "print(\"Registro atualizado com sucesso!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('-MKagzMYjJQG-LgZRrRp', {'bairro': 'Vila Agaó', 'cep': '11250000', 'cidade': 'Bertioga', 'cpf': '123.456.789-10', 'email': 'victor.santos.cd@gmail.com', 'estado': 'São Paulo', 'nome': 'Victor Santos Silva', 'numero': 1270, 'rua': 'Miguel Seiad Bichir', 'senha': 'minhasenhasupersecreta', 'telefone': '1333163316'}), ('usuario', {'bairro': 'Vila Agaó', 'cep': '11250000', 'cidade': 'Botucatu', 'cpf': '123.456.789-10', 'email': 'victor.santos.cd@gmail.com', 'estado': 'São Paulo', 'nome': 'Victor Santos Silva', 'numero': 1270, 'rua': 'Miguel Seiad Bichir', 'senha': 'minhasenhasupersecreta', 'telefone': '1333163316'})])\n"
+     ]
+    }
+   ],
+   "source": [
+    "usuarios = db.child(\"usuarios\").get()\n",
+    "print(usuarios.val())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-MKagzMYjJQG-LgZRrRp {'bairro': 'Vila Agaó', 'cep': '11250000', 'cidade': 'Bertioga', 'cpf': '123.456.789-10', 'email': 'victor.santos.cd@gmail.com', 'estado': 'São Paulo', 'nome': 'Victor Santos Silva', 'numero': 1270, 'rua': 'Miguel Seiad Bichir', 'senha': 'minhasenhasupersecreta', 'telefone': '1333163316'}\n",
+      "usuario {'bairro': 'Vila Agaó', 'cep': '11250000', 'cidade': 'Botucatu', 'cpf': '123.456.789-10', 'email': 'victor.santos.cd@gmail.com', 'estado': 'São Paulo', 'nome': 'Victor Santos Silva', 'numero': 1270, 'rua': 'Miguel Seiad Bichir', 'senha': 'minhasenhasupersecreta', 'telefone': '1333163316'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#iterando com um loop\n",
+    "for usuario in usuarios.each():\n",
+    "    print(usuario.key(), usuario.val())"
+   ]
   }
  ],
  "metadata": {
