--- a/realtime_database.ipynb
+++ b/realtime_database.ipynb
@@ -173,6 +173,38 @@
     "for usuario in usuarios.each():\n",
     "    print(usuario.key(), usuario.val())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Removendo usuário"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usuário removido com sucesso!\n"
+     ]
+    }
+   ],
+   "source": [
+    "db.child(\"usuarios\").child(\"usuario\").remove()\n",
+    "print(\"Usuário removido com sucesso!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
