--- a/realtime_database.ipynb
+++ b/realtime_database.ipynb
@@ -73,6 +73,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adicionando usuário"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -198,13 +205,6 @@
     "db.child(\"usuarios\").child(\"usuario\").remove()\n",
     "print(\"Usuário removido com sucesso!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
