--- a/realtime_database.ipynb
+++ b/realtime_database.ipynb
@@ -362,28 +362,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OrderedDict([('-MKed9DCLQ48WyBDMWct', {'bairro': 'Vila Agaó', 'cep': '11250000', 'cidade': 'Bertioga', 'cpf': '123.456.789-10', 'email': 'victor.santos.cd@gmail.com', 'estado': 'São Paulo', 'nome': 'Victor Santos Silva', 'numero': 1270, 'rua': 'Miguel Seiad Bichir', 'senha': 'minhasenhasupersecreta', 'telefone': '1333163316'})])\n"
+      "OrderedDict([('-MKed9DCLQ48WyBDMWct', {'bairro': 'Vila Agaó', 'cep': '11250000', 'cidade': 'Bertioga', 'cpf': '123.456.789-10', 'email': 'victor.santos.cd@gmail.com', 'estado': 'São Paulo', 'nome': 'Victor Santos Silva', 'numero': 1270, 'rua': 'Miguel Seiad Bichir', 'senha': 'minhasenhasupersecreta', 'telefone': '1333163316'})]) 1\n"
      ]
     }
    ],
    "source": [
     "usuario_eu = db.child(\"usuarios\").order_by_child(\"nome\").equal_to(\"Victor Santos Silva\").get()\n",
-    "print(usuario_eu.val())"
+    "print(usuario_eu.val(), len(usuario_eu.val()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[] 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "usuario_falso = db.child(\"usuarios\").order_by_child(\"nome\").equal_to(\"Victor Silva\").get()\n",
+    "print(usuario_falso.val(), len(usuario_falso.val()))"
+   ]
   }
  ],
  "metadata": {
