--- a/realtime_database.ipynb
+++ b/realtime_database.ipynb
@@ -395,6 +395,97 @@
     "usuario_falso = db.child(\"usuarios\").order_by_child(\"nome\").equal_to(\"Victor Silva\").get()\n",
     "print(usuario_falso.val(), len(usuario_falso.val()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "argon2-cffi==20.1.0\n",
+      "async-generator==1.10\n",
+      "attrs==20.2.0\n",
+      "backcall==0.2.0\n",
+      "bleach==3.2.1\n",
+      "certifi==2020.6.20\n",
+      "cffi==1.14.3\n",
+      "chardet==3.0.4\n",
+      "click==7.1.2\n",
+      "decorator==4.4.2\n",
+      "defusedxml==0.6.0\n",
+      "entrypoints==0.3\n",
+      "Flask==1.1.2\n",
+      "gcloud==0.17.0\n",
+      "googleapis-common-protos==1.52.0\n",
+      "httplib2==0.18.1\n",
+      "idna==2.10\n",
+      "ipykernel==5.3.4\n",
+      "ipython==7.18.1\n",
+      "ipython-genutils==0.2.0\n",
+      "ipywidgets==7.5.1\n",
+      "itsdangerous==1.1.0\n",
+      "jedi==0.17.2\n",
+      "Jinja2==2.11.2\n",
+      "jsonschema==3.2.0\n",
+      "jupyter-client==6.1.7\n",
+      "jupyter-core==4.6.3\n",
+      "jupyterlab-pygments==0.1.2\n",
+      "jws==0.1.3\n",
+      "MarkupSafe==1.1.1\n",
+      "mistune==0.8.4\n",
+      "nbclient==0.5.1\n",
+      "nbconvert==6.0.7\n",
+      "nbformat==5.0.8\n",
+      "nest-asyncio==1.4.1\n",
+      "notebook==6.1.4\n",
+      "oauth2client==3.0.0\n",
+      "packaging==20.4\n",
+      "pandocfilters==1.4.2\n",
+      "parso==0.7.1\n",
+      "pexpect==4.8.0\n",
+      "pickleshare==0.7.5\n",
+      "prometheus-client==0.8.0\n",
+      "prompt-toolkit==3.0.8\n",
+      "protobuf==3.13.0\n",
+      "ptyprocess==0.6.0\n",
+      "pyasn1==0.4.8\n",
+      "pyasn1-modules==0.2.8\n",
+      "pycparser==2.20\n",
+      "pycryptodome==3.4.3\n",
+      "Pygments==2.7.1\n",
+      "pyparsing==2.4.7\n",
+      "Pyrebase==3.0.27\n",
+      "Pyrebase4==4.4.1\n",
+      "pyrsistent==0.17.3\n",
+      "python-dateutil==2.8.1\n",
+      "python-dotenv==0.14.0\n",
+      "python-firebase==1.2\n",
+      "python-jwt==2.0.1\n",
+      "pyzmq==19.0.2\n",
+      "requests==2.11.1\n",
+      "requests-toolbelt==0.7.0\n",
+      "rsa==4.6\n",
+      "Send2Trash==1.5.0\n",
+      "six==1.15.0\n",
+      "terminado==0.9.1\n",
+      "testpath==0.4.4\n",
+      "tornado==6.0.4\n",
+      "traitlets==5.0.5\n",
+      "urllib3==1.25.11\n",
+      "wcwidth==0.2.5\n",
+      "webencodings==0.5.1\n",
+      "Werkzeug==1.0.1\n",
+      "widgetsnbextension==3.5.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip freeze"
+   ]
   }
  ],
  "metadata": {
